lre.h

/* Detalized error code is in lre_error_t */
#define LRE_OK   0
#define LRE_FAIL 1
typedef enum {
	LRE_SEP_NEGATIVE = '~',
	LRE_SEP_POSITIVE = '+'
} lre_sep_t;
/* Do NOT change value of existing numeric tags */
typedef enum {
	LRE_TAG_NUMBER_NEGATIVE_INF = 'C',
	LRE_TAG_NUMBER_NEGATIVE_BIG = 'D',
	LRE_TAG_NUMBER_NEGATIVE_8   = 'E',
	LRE_TAG_NUMBER_NEGATIVE_7   = 'F',
	LRE_TAG_NUMBER_NEGATIVE_6   = 'G',
	LRE_TAG_NUMBER_NEGATIVE_5   = 'H',
	LRE_TAG_NUMBER_NEGATIVE_4   = 'I',
	LRE_TAG_NUMBER_NEGATIVE_3   = 'J',
	LRE_TAG_NUMBER_NEGATIVE_2   = 'K',
	LRE_TAG_NUMBER_NEGATIVE_1   = 'L',
	
	LRE_TAG_NUMBER_POSITIVE_1   = 'M',
	LRE_TAG_NUMBER_POSITIVE_2   = 'N',
	LRE_TAG_NUMBER_POSITIVE_3   = 'O',
	LRE_TAG_NUMBER_POSITIVE_4   = 'P',
	LRE_TAG_NUMBER_POSITIVE_5   = 'Q',
	LRE_TAG_NUMBER_POSITIVE_6   = 'R',
	LRE_TAG_NUMBER_POSITIVE_7   = 'S',
	LRE_TAG_NUMBER_POSITIVE_8   = 'T',
	LRE_TAG_NUMBER_POSITIVE_BIG = 'U',
	LRE_TAG_NUMBER_POSITIVE_INF = 'V',
	
	LRE_TAG_STRING              = 'X'
} lre_tag_t;
/* String modifiers */
typedef enum {
	LRE_MOD_DEFAULT     = 0, /* Will never be packed */
	LRE_MOD_STRING_RAW  = 'H',
	LRE_MOD_STRING_UTF8 = 'L'
} lre_mod_t;
typedef enum {
	LRE_ERROR_NOTHING = 0,
	LRE_ERROR_ALLOCATION,
	LRE_ERROR_NULLPTR,
	LRE_ERROR_RANGE,
	LRE_ERROR_NAN,
	LRE_ERROR_LENGTH,
	LRE_ERROR_TAG,
	LRE_ERROR_SIGN,
	LRE_ERROR_MOD,
	LRE_ERROR_HANDLER
} lre_error_t;
lre_decl
const char *lre_strerror(lre_error_t error) {
	switch (error) {
		case LRE_ERROR_NOTHING:    return "successful return";
		case LRE_ERROR_ALLOCATION: return "memory cannot be (re)allocated";
		case LRE_ERROR_NULLPTR:    return "null pointer passed";		
		case LRE_ERROR_RANGE:      return "value out of allowed range";
		case LRE_ERROR_NAN:        return "value is NaN";
		case LRE_ERROR_LENGTH:     return "invalid length of data";
		case LRE_ERROR_TAG:        return "unknown tag";
		case LRE_ERROR_SIGN:       return "unknown sign";
		case LRE_ERROR_MOD:        return "unknown string modifier";
		case LRE_ERROR_HANDLER:    return "final value cannot be handled";
		default:                   return "unknown error";
	}
}
lre_decl
void lrex_write_char(uint8_t **dst, uint8_t value) {
	*(*dst)++ = value;
}
lre_decl
void lrex_write_uint16(uint8_t **dst, uint16_t value) {
	lrex_write_uint8(dst, value >> 8);
	lrex_write_uint8(dst, value & 0xff);
}
lre_decl
void lrex_write_str(uint8_t **dst, const uint8_t *src, size_t len, uint8_t mask) {
	while (len--) {
		int byte = *src++ ^ mask;
		lrex_write_uint8(dst, byte);
	}
}
lre_decl
uint64_t lrex_read_uint64n(const uint8_t **src, size_t nbytes, uint8_t mask) {
	uint64_t value = 0;
	
	while (nbytes--) {
		value = (value << 8) | lrex_read_uint8(src, mask);
	}
	
	return value;
}
lre_decl
void lrex_read_str(const uint8_t **src, uint8_t *dst, size_t nbytes, uint8_t mask) {
	while (nbytes--) {
		*dst++ = lrex_read_uint8(src, mask);
	}
}
/*
 * */
typedef struct {
	const uint8_t *src; /* Pointer to first character */
	const uint8_t *end; /* Pointer to last character */
} lre_slice_t;
/**
 * @brief Returns length of slice
 * @param slice Pointer to lre_slice_t object
 */
lre_decl
ptrdiff_t lre_slice_len(const lre_slice_t *slice) {
	return slice->end - slice->src;
}
/* LRE MEMORY BUFFER.
 * Normally, it is long-lived objects in one thread. */
typedef struct {
	uint8_t *data;     /* Payload */
	size_t   size;     /* Payload length */
	size_t   capacity; /* Total *data allocated space  */
	size_t   reserved; /* Minimal *data allocated space */
} lre_buffer_t;
/**
 * @brief Create buffer instance with reserved memory. The buffer memory is always terminated with an extra null character.
 * @param reserve Reserved space
 * @param error Pointer to lre_error_t or 0
 * @return Pointer to lre_buffer_t instance if success, 0 otherwise
 */
lre_decl
lre_buffer_t *lre_buffer_create(size_t reserve, lre_error_t *error) {
	lre_buffer_t *buf = lre_std_calloc(1, sizeof(lre_buffer_t));
	
	if (lre_unlikely(!buf)) {
		lre_fail(LRE_ERROR_ALLOCATION, error);
		return 0;
	}
	
	reserve++;
	buf->data = lre_std_malloc(reserve);
		
	if (!buf->data) {
		lre_fail(LRE_ERROR_ALLOCATION, error);
		lre_std_free(buf);
		return 0;
	}
	
	buf->data[0] = '\0';
	buf->reserved = reserve;
	buf->capacity = reserve;

	return buf;
}
/**
 * @brief Request buffer space. If capacity is too small, allocate additional memory.
 * @param buf Pointer to lre_buffer_t
 * @param required Required memory
 * @param error Pointer to lre_error_t or 0
 * @return LRE_OK if success, LRE_FAIL otherwise
 */
lre_decl
int lre_buffer_require(lre_buffer_t *buf, size_t required, lre_error_t *error) {
	if (lre_unlikely(buf->size + required > buf->capacity)) {
		size_t capacity = (buf->size + required + 1) * 10 / 8; /* +25% */
		uint8_t *data = lre_std_realloc(buf->data, capacity);
		
		if (lre_unlikely(!data)) {
			return lre_fail(LRE_ERROR_ALLOCATION, error);
		}
		
		buf->data = data;
		buf->capacity = capacity;
	}
	
	return LRE_OK;
}
/**
 * @brief Returns pointer to next to last character.
 *
 * This call is mostly used for write to end of buffer.
 * Returned pointer is invalidated after calls lre_buffer_reset(), lre_buffer_require(), lre_buffer_close().
 *
 * @param buf Pointer to lre_buffer_t
 */
lre_decl
uint8_t *lre_buffer_end(lre_buffer_t *buf) {
	return buf->data + buf->size;
}
/**
 * @brief Set size to pointer offset distance and terminate buffer with a null character.
 * @param buf Pointer to lre_buffer_t
 * @param end Pointer to buffer data (tupically from lre_buffer_end())
 * @return LRE_OK if success, LRE_FAIL otherwise
 */
lre_decl
void lre_buffer_set_size_distance(lre_buffer_t *buf, const uint8_t *end) {
	if (lre_likely(end >= buf->data)) {
		buf->size = end - buf->data;
		buf->data[buf->size] = '\0';
	}
}
/**
 * @brief Fast version of lre_buffer_reset without memory reallocations.
 * @param buf Pointer to lre_buffer_t
 */
lre_decl
void lre_buffer_reset_fast(lre_buffer_t *buf) {
	buf->size = 0;
	buf->data[0] = '\0';
}
/**
 * @brief Reallocate memory, reset size to 0 and terminate buffer with a null character.
 * @param buf Pointer to lre_buffer_t
 * @param error Pointer to lre_error_t or 0
 * @return LRE_OK if success, LRE_FAIL otherwise
 */
lre_decl
int lre_buffer_reset(lre_buffer_t *buf, lre_error_t *error) {
	lre_buffer_reset_fast(buf);

	if (lre_unlikely(buf->capacity != buf->reserved)) {
		uint8_t *data = lre_std_realloc(buf->data, buf->reserved);
		
		if (lre_unlikely(!data)) {
			return lre_fail(LRE_ERROR_ALLOCATION, error);
		}
		
		buf->data = data;
		buf->capacity = buf->reserved;
	}
	
	return LRE_OK;
}
/**
 * @brief Free all buffer memory
 * @param buf Pointer to lre_buffer_t
 */
lre_decl
void lre_buffer_close(lre_buffer_t *buf) {
	if (buf) {
		lre_std_free(buf->data);
		lre_std_free(buf);
	}
}
/*
 *
 */


/**
 * @brief Write string into buffer
 *
 * String will be written in the hexadecimal representation with one character of modifier.
 *
 * @param buf Pointer to lre_buffer_t
 * @param src Pointer to string
 * @param len Length of string
 * @param mod String modifier: LRE_MOD_STRING_RAW (also 0), LRE_MOD_STRING_UTF8
 * @param error Pointer to lre_error_t or 0
 * @return LRE_OK if success, LRE_FAIL otherwise
 */
lre_decl
int lre_pack_str(lre_buffer_t *buf, const uint8_t *src, size_t len, lre_mod_t mod, lre_error_t *error) {
	/* tag(1) + string(len*2) + modifier(1) + separator(1) */
	if (lre_likely(lre_buffer_require(buf, (1+(len*2)+1+1), error) == LRE_OK)) {
		uint8_t *dst = lre_buffer_end(buf);
		
		lrex_write_char(&dst, LRE_TAG_STRING);
		
		if (lre_unlikely(!mod)) {
			mod = LRE_MOD_STRING_RAW;
		}
		
		lrex_write_str (&dst, src, len, 0);
		lrex_write_char(&dst, (int) mod);
		lrex_write_char(&dst, LRE_SEP_POSITIVE);
		lre_buffer_set_size_distance(buf, dst);
		return LRE_OK;
	}
	
	return LRE_FAIL;
}
/**
 * @brief Write 64-bit signed integer value into buffer
 *
 * Value will be written in the hexadecimal representation byte by byte, so it length is always multiple of two.
 *
 * @param buf Pointer to lre_buffer_t
 * @param value Integer value
 * @param error Pointer to lre_error_t or 0
 * @return LRE_OK if success, LRE_FAIL otherwise
 */
lre_decl
int lre_pack_int(lre_buffer_t *buf, int64_t value, lre_error_t *error) {
	/* tag(1) + value(16) + separator(1) */
	if (lre_likely(lre_buffer_require(buf, (1+16+1), error) == LRE_OK)) {
		uint8_t *dst = lre_buffer_end(buf);
		
		if (value < 0) {
			uint64_t uvalue = lrex_negate_negative(value);
			uint8_t  nbytes = lrex_count_nbytes(uvalue);
			
			lrex_write_char   (&dst, (int) lrex_tag_by_nbytes_negative(nbytes));
			lrex_write_uint64n(&dst, ~uvalue, nbytes);
			lrex_write_char   (&dst, LRE_SEP_NEGATIVE);
		}
		else {
			uint8_t nbytes = lrex_count_nbytes(value);
			
			lrex_write_char   (&dst, (int) lrex_tag_by_nbytes_positive(nbytes));
			lrex_write_uint64n(&dst, value, nbytes);
			lrex_write_char   (&dst, LRE_SEP_POSITIVE);
		}
		
		lre_buffer_set_size_distance(buf, dst);
		return LRE_OK;
	}
	
	return LRE_FAIL;
}
/**
 * @brief Write double value into buffer
 *
 * Integral part will be written in the hexadecimal representation identically to lre_pack_int,
 * fractional part will be continuously written in the decimal representation with 15 digits of precision.
 *
 * @param buf Pointer to lre_buffer_t
 * @param value Double value
 * @param error Pointer to lre_error_t or 0
 * @return LRE_OK if success, LRE_FAIL otherwise
 */
lre_decl
int lre_pack_float(lre_buffer_t *buf, double value, lre_error_t *error) {
	if (lre_unlikely(lre_isnan(value))) {
		return lre_fail(LRE_ERROR_NAN, error);
	}
	
	/* tag(1) + integral(16) + fraction(15) + separator(1) */
	if (lre_likely(lre_buffer_require(buf, (1+16+15+1), error) == LRE_OK)) {
		uint8_t *dst = lre_buffer_end(buf);
		
		if (lre_unlikely(lre_isinf(value))) {
			if (value < 0) {
				lrex_write_char(&dst, LRE_TAG_NUMBER_NEGATIVE_INF);
				lrex_write_char(&dst, LRE_SEP_NEGATIVE);
			}
			else {
				lrex_write_char(&dst, LRE_TAG_NUMBER_POSITIVE_INF);
				lrex_write_char(&dst, LRE_SEP_POSITIVE);
			}
			
			lre_buffer_set_size_distance(buf, dst);
			return LRE_OK;
		}
		
		if (lre_unlikely(value > 281474976710655.0 || value < -281474976710655.0)) {
			return lre_fail(LRE_ERROR_RANGE, error);
		}
		
		if (value < 0) {
			uint64_t integral = lrex_negate_negative(value);
			uint64_t fraction = lrex_negate_negative((value + integral) * 1e15 - 0.5);
			uint8_t  nbytes   = lrex_count_nbytes(integral);

			/* Decimal inversion */
			fraction = lrex_max10[15] - fraction;

			lrex_write_char   (&dst, (int) lrex_tag_by_nbytes_negative(nbytes));
			lrex_write_uint64n(&dst, ~integral, nbytes);
			lrex_write_decimal(&dst, fraction, 15);
			lrex_write_rstrip (&dst, '9', 15);
			lrex_write_char   (&dst, LRE_SEP_NEGATIVE);
		}
		else {
			uint64_t integral = value;
			uint64_t fraction = (value - integral) * 1e15 + 0.5;
			uint8_t  nbytes   = lrex_count_nbytes(integral);

			lrex_write_char   (&dst, (int) lrex_tag_by_nbytes_positive(nbytes));
			lrex_write_uint64n(&dst, integral, nbytes);
			lrex_write_decimal(&dst, fraction, 15);
			lrex_write_rstrip (&dst, '0', 15);
			lrex_write_char   (&dst, LRE_SEP_POSITIVE);
		}
		
		lre_buffer_set_size_distance(buf, dst);
		return LRE_OK;
	}
	
	return LRE_FAIL;
}
/*
 * */
typedef struct {
	lre_tag_t tag;              /* Numeric tag */
	uint8_t   mask;             /* 0xFF for negative numbers, 0 otherwise */
	ptrdiff_t nbytes_integral;  /* Number of encoded bytes */
	ptrdiff_t ndigits_fraction; /* Number of digits after integer part */
} lre_number_info_t;
typedef struct lre_loader_t lre_loader_t;
/* LRE end handlers for unpack.
 * Normally, it is long-lived objects. */
typedef struct lre_loader_t {
	void *app_private;
	int (*handler_int)     (lre_loader_t *loader, int64_t value);
	int (*handler_float)   (lre_loader_t *loader, double value);
	int (*handler_inf)     (lre_loader_t *loader, lre_tag_t tag);
	int (*handler_str)     (lre_loader_t *loader, lre_slice_t *slice, lre_mod_t mod);
	int (*handler_bigint)  (lre_loader_t *loader, lre_slice_t *slice, lre_number_info_t *info);
	int (*handler_bigfloat)(lre_loader_t *loader, lre_slice_t *slice, lre_number_info_t *info);

	ptrdiff_t builtin_nfraction;
} lre_loader_t;
lre_decl
void lre_loader_init(lre_loader_t *loader, void *app_private) {
	loader->app_private      = app_private;

	loader->handler_int      = &lre_loader_default_handler_int;
	loader->handler_float    = &lre_loader_default_handler_float;
	loader->handler_str      = &lre_loader_default_handler_str;
	loader->handler_inf      = &lre_loader_default_handler_inf;
	loader->handler_bigint   = &lre_loader_default_handler_bigint;
	loader->handler_bigfloat = &lre_loader_default_handler_bigfloat;

	loader->builtin_nfraction = 15;
}
lre_decl
int lre_tokenize(lre_loader_t *loader, const uint8_t *src, size_t size, lre_error_t *error) {
	const uint8_t *sep = src;
	const uint8_t *end = src + size;
	
	while ((sep = lrex_memsep(src, end - sep))) {
		lre_tag_t   tag   = lrex_read_char(&src);
		lre_slice_t slice = {src, sep};

		src = sep + 1;
		
		if (lre_unlikely(lre_slice_len(&slice) < 0)) {
			return lre_fail(LRE_ERROR_LENGTH, error);
		}
		
		if (lrex_tag_is_string(tag)) {
			if (lre_unlikely(lre_load_string(loader, tag, &slice, error) != LRE_OK)) {
				return LRE_FAIL;
			}
			
			continue;
		}
		
		if (lrex_tag_is_number(tag)) {
			if (lre_unlikely(lre_load_number(loader, tag, &slice, error) != LRE_OK)) {
				return LRE_FAIL;
			}
			
			continue;
		}
		
		return lre_fail(LRE_ERROR_TAG, error);
	}

	return LRE_OK;
}